--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
+      - name: Install torch
+        run: pip install torch torchvision torchaudio
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run tests
